--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
 [egg_info]
 tag_build = dev
 tag_svn_revision = false
+
+[build_sphinx]
+source-dir = docs/
+build-dir  = docs/_build
+all_files  = true
+
+[upload_sphinx]
+upload-dir = docs/_build/html
+
+[bdist_wheel]
+universal = true
