--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,13 @@
 # "pip install tox" and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py36, py37, py38, py39, py310, py311
+envlist = py27, py36, py37, py38, py39, py310, py311, py312
+requires =
+    tox>=4
+    virtualenv<20.22.0
 
 [testenv]
+package = wheel
 commands = python -m unittest discover {posargs}
 
 [testenv:docs]
