--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,29 +2,76 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [main, workflow]
   pull_request:
     branches: [main]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
-    PIP_DISABLE_PIP_VERSION_CHECK: 1
-    PIP_NO_PYTHON_VERSION_WARNING: 1
+  PIP_DISABLE_PIP_VERSION_CHECK: 1
+  PIP_NO_PYTHON_VERSION_WARNING: 1
 
 jobs:
+  build-27-buster:
+    # https://github.com/actions/setup-python/issues/672#issuecomment-1589120020
+    runs-on: ubuntu-latest
+    container:
+      image: python:2.7.18-buster
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["2.7"]
+
+    steps:
+      - name: Check out project
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: python -m pip install -e .
+
+      - name: List installed packages
+        run: python -m pip list
+
+      - name: Run tests
+        run: python -m unittest discover
+
+  build-36-buster:
+    # https://github.com/actions/setup-python/issues/672#issuecomment-1589120020
+    runs-on: ubuntu-latest
+    container:
+      image: python:3.6.15-buster
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.6"]
+
+    steps:
+      - name: Check out project
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: python -m pip install -e .
+
+      - name: List installed packages
+        run: python -m pip list
+
+      - name: Run tests
+        run: python -m unittest discover
+
   build:
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["2.7", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12.0-rc.2"]
 
     steps:
-      - name: Cancel previous runs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-          all_but_latest: true
-
       - name: Check out project
         uses: actions/checkout@v3
 
