--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,10 @@ requires =
 
 [testenv]
 package = wheel
-commands = python -m unittest discover {posargs}
+wheel_build_env = .pkg
+commands =
+    python -m pip --disable-pip-version-check --no-python-version-warning list
+    python -m unittest discover {posargs}
 
 [testenv:docs]
 extras = docs
