--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,8 @@ commands =
 
 [testenv:docs]
 extras = docs
-commands = python setup.py build_sphinx {posargs}
+commands =
+    python -m sphinx -a -d docs/_build/doctrees {posargs} docs docs/_build/html
 
 [pytest]
 testpaths = kmd/tests
