--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # "pip install tox" and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py36, py37, py38, py39, py310, py311, py312
+envlist = py27, py36, py37, py38, py39, py310, py311, py312, py313
 requires =
     tox>=4
     virtualenv<20.22.0
@@ -13,7 +13,7 @@ requires =
 package = wheel
 wheel_build_env = .pkg
 commands =
-    python -m pip --disable-pip-version-check --no-python-version-warning list
+    python -m pip --disable-pip-version-check list
     python -m unittest discover {posargs}
 
 [testenv:docs]
